# quotient

./: README.md  meson.build  meson_options.txt
docs/: Makefile  conf.py  index.rst  quickstart.rst
example/: matrix_market_minimum_degree.cc
include/: quotient.hpp
include/quotient/: .quotient_graph-impl.hpp.swp  buffer-complex-impl.hpp  buffer-impl.hpp  buffer.hpp  complex-impl.hpp  complex.hpp  config.hpp  coordinate_graph-impl.hpp  coordinate_graph.hpp  degree_and_hash_lists-impl.hpp  degree_and_hash_lists.hpp  degree_lists-impl.hpp  degree_lists.hpp  degree_type.hpp  enable_if.hpp  external_degree-impl.hpp  external_degree.hpp  external_degree_type.hpp  graph_edge.hpp  hash_lists-impl.hpp  hash_lists.hpp  index_utils-impl.hpp  index_utils.hpp  integers.hpp  io_utils-impl.hpp  io_utils.hpp  macros.hpp  matrix_market-impl.hpp  matrix_market.hpp  minimum_degree-impl.hpp  minimum_degree.hpp  minimum_degree_control.hpp  quotient_graph-impl.hpp  quotient_graph.hpp  random_access_heap-impl.hpp  random_access_heap.hpp  set_utils-impl.hpp  set_utils.hpp  shrinkable_cached_binary_tree.hpp  timer-impl.hpp  (+1 more)
subprojects/: mantis.wrap
test/: coordinate_graph_test.cc  external_degree_test.cc  graph_test.cc  minimum_degree_test.cc  quotient_graph_test.cc  random_access_heap_test.cc  set_utils_test.cc
test/matrix_market/: coordinate-general-small.mtx  coordinate-symmetric-small.mtx
