#
# Copyright (c) 2018 Jack Poulson <jack@hodgestar.com>
#
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#

option('use_64bit',
    type : 'boolean',
    value : true,
    yield : true,
    description : 'use 64-bit integers for representing the graph?')

option('strong_hashes',
    type : 'boolean',
    value : false,
    yield : true,
    description : 'use a more expensive, but better supervariable hash?')

option('enable_timers',
    type : 'boolean',
    value : false,
    yield : true,
    description : 'enable code for timing the components of QuotientGraph?')

option('enable_debug',
    type : 'boolean',
    value : false,
    yield : true,
    description : 'enable extra debugging assertions?')

option('enable_openmp',
    type : 'boolean',
    value : false,
    yield : true,
    description : 'demand OpenMP support?')

option('disable_openmp',
    type : 'boolean',
    value : true,
    yield : true,
    description : 'disable OpenMP support?')

option('disable_gcc_fma',
    type : 'boolean',
    value : false,
    description : 'disable GCC FMA intrinsic fallback?')

option('disable_xlc_fma',
    type : 'boolean',
    value : false,
    description : 'disable XLC FMA intrinsic fallback?')

option('ieee_sum',
    type : 'boolean',
    value : false,
    description : 'enable IEEE double-mantissa summation?')
